[gd_scene load_steps=4 format=2]

[ext_resource path="res://firetrap.gd" type="Script" id=1]
[ext_resource path="res://fireparticle.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.7767
height = 42.5879

[node name="firetrap" type="Area2D"]
script = ExtResource( 1 )

[node name="Particles2D" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.950752, -25.0512 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
